--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,7 +7,8 @@ html, body {
     height: 100vh;
     margin: 0;
     padding: 0;
-    background-color: #020e26;
+   background-color: #2d3436;
+background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
 }
 
 .container {
@@ -26,7 +27,7 @@ html, body {
 
 .card {
     background: center;
-    color: white;
+    color: antiquewhite;
     border-radius: 8px;
     padding: 0px 18px;
     width: 244px;
@@ -47,6 +48,7 @@ html, body {
 
 .card h2 {
     text-transform: capitalize;
+    color: rgb(255, 255, 255);
 }
 
 .card h4 {
