--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -27,7 +27,7 @@ background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
 
 .card {
     background: center;
-    color: antiquewhite;
+    color: white;
     border-radius: 8px;
     padding: 0px 18px;
     width: 244px;
@@ -48,7 +48,7 @@ background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
 
 .card h2 {
     text-transform: capitalize;
-    color: rgb(255, 255, 255);
+    color: white;
 }
 
 .card h4 {
@@ -62,6 +62,7 @@ background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
     background-size: cover;
     transform: scale(1.02);
     margin-right: 40px;
+    filter: brightness(50%);
 }
 
 .card-1:hover {
@@ -74,6 +75,7 @@ background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
     background-size: cover;
     transform: scale(1.01);
     margin-right: 31px;
+    filter: brightness(50%);
 }
 
 .card-2:hover {
@@ -88,6 +90,7 @@ background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
 .card-3 {
     background: url(https://cdn.pixabay.com/photo/2018/11/12/13/35/salvador-3810855_1280.jpg) center;
     background-size: cover;
+    filter: brightness(50%);
 }
 
 .card-3:hover {
